# OdbcGen

./: .gitignore  CMakeLists.txt  GenWindow.cpp  GenWindow.h  README.md  main.cpp  odbcsql.cpp  odbcsql.h  stdafx.h
